Add avg time3
